classDiagram
    Field -- Judge
    Agent -- Field
    Grid -- Point
    class Grid {
        +at() any
    }

    class Field {
        +int height
        +int width
        +Grid base_point
        +Grid status
    }

    class Judge {
        +Field field
        +tuple[str, str] teams
        +tuple[str, str] wall_mark
        +tuple[str, str] zone_mark
        +calc_point(): dict[str, int]
        +build_castle(): None
        +fill(): None
        +update(): None
        +judge_castle(): dict[str, list[Path]]
        +judge_zone(): dict[str, set[Point]]
        +submit_agents_activity(): Grid[int]
    }

    class Agent {
        +Field field
        +Point point
        +bool on_field
        +str next_activity
    }

    class Point {
        +int x
        +int y
    }

    class Path {
        +reduction(): Path
    }
